# IMDB-Sentiment-Studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RNN_Sentiment.ipynb  pyproject.toml  requirements.txt  rnn_model_config.json  rnn_model_state.pt  streamlit_app.py  tfidf_vectorizer.pkl  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
tests/: test_utils.py
